# ProyectoFEDA

./: README.md
twitter-political-analysis/: CMakeLists.txt  README.md  a
twitter-political-analysis/data/: twitter_connections.csv  twitter_users.csv
twitter-political-analysis/src/: main.cpp
twitter-political-analysis/src/algorithms/: Clustering.cpp  Ranking.cpp  SCCFinder.cpp
twitter-political-analysis/src/analysis/: PoliticalAnalyzer.cpp
twitter-political-analysis/src/data/: DataLoader.cpp
twitter-political-analysis/src/include/: Clustering.h  DataLoader.h  PoliticalAnalyzer.h  Ranking.h  SCCFinder.h  UserGraph.h  UserandConnections.h
twitter-political-analysis/src/structures/: UserGraph.cpp  UserandConnections.cpp
